tests/snapshots/presenter__presenter_loading.snap
---
source: tests/presenter.rs
expression: "render(&state, 100, 24)"
---
"┌r──────────────────────────[-]─[p]─[x]┐┌Content───────────────────────────────────────────────────┐"
"│  ▾ src                               ││Rendering…                                                │"
"│M   main.rs                           ││                                                          │"
"│    ▾ inner                           ││                                                          │"
"│A     added.rs                        ││                                                          │"
"│  README.md                           ││                                                          │"
"│D gone.txt                            ││                                                          │"
"│? scratch.log                         ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└────────────────────────────────────────────────────? help┘"
