tests/snapshots/presenter__presenter_passive_range_flash.snap
---
source: tests/presenter.rs
expression: out
---
"┌r──────────────────────────[-]─[p]─[x]┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src                               ││line one                                                  │"
"│M   main.rs                           ││line two                                                  │"
"│    ▾ inner                           ││line three                                                │"
"│A     added.rs                        ││line four                                                 │"
"│  README.md                           ││line five                                                 │"
"│D gone.txt                            ││line six                                                  │"
"│? scratch.log                         ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└────────────────────────────────────────────────────? help┘"
